配置文件新增

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,6 @@
 packages:
-  - 'apps/*'
-  - 'packages/*'
+  - "dev/*"
+  # all packages in direct subdirs of packages/
+  - "packages/*"
+  # exclude packages that are inside test directories
+  - "!**/test/**"
