--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
   },
   "keywords": [],
   "author": "FreedomClannad",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.9.0",
+    "eslint-plugin": "^1.0.1",
+    "globals": "^15.9.0",
+    "prettier": "^3.3.3",
+    "typescript-eslint": "^8.0.1"
+  }
 }
