--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/eslint__js": "^8.42.3",
     "eslint": "^9.9.0",
     "eslint-plugin": "^1.0.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "typescript-eslint": "^8.0.1"
