--- a/packages/Ketcher/package.json
+++ b/packages/Ketcher/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "@dev/ketcher",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./src/index.tsx",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^22.2.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.0",
-    "vite-plugin-eslint": "^1.8.1"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  }
+	"name": "am-ketcher",
+	"version": "1.0.0",
+	"description": "",
+	"main": "./src/index.tsx",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/node": "^22.2.0",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@vitejs/plugin-react-swc": "^3.7.0",
+		"typescript": "^5.5.4",
+		"vite": "^5.4.0",
+		"vite-plugin-eslint": "^1.8.1"
+	},
+	"dependencies": {
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
+	}
 }
