--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,8 @@
 packages:
-  - "dev/*"
+  - "apps/*"
   # all packages in direct subdirs of packages/
   - "packages/*"
   # exclude packages that are inside test directories
+  - "example"
+
   - "!**/test/**"
