--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "dev-template",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "FreedomClannad",
-  "license": "ISC",
-  "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/eslint__js": "^8.42.3",
-    "eslint": "^9.9.0",
-    "eslint-plugin": "^1.0.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "prettier": "^3.3.3",
-    "typescript-eslint": "^8.0.1"
-  }
+	"name": "dev-template",
+	"version": "1.0.0",
+	"description": "",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "FreedomClannad",
+	"license": "ISC",
+	"devDependencies": {
+		"@eslint/js": "^9.9.0",
+		"@types/eslint__js": "^8.42.3",
+		"eslint": "^9.9.0",
+		"eslint-plugin": "^1.0.1",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"eslint-plugin-react-refresh": "^0.4.9",
+		"globals": "^15.9.0",
+		"prettier": "^3.3.3",
+		"typescript-eslint": "^8.0.1",
+		"nx": "19.5.7"
+	}
 }
