--- a/packages/Ketcher/package.json
+++ b/packages/Ketcher/package.json
@@ -1,28 +1,39 @@
 {
-	"name": "am-ketcher",
+	"name": "@am/ketcher",
+	"private": true,
 	"version": "1.0.0",
-	"description": "",
-	"main": "./src/index.tsx",
+	"type": "module",
+	"main": "dist/ketcher.js",
+	"types": "dist/main.d.ts",
+	"files": [
+		"dist"
+	],
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"dev": "vite",
+		"build:web": "tsc -b && vite build",
+		"build": "tsc --p ./tsconfig.build.json && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
 	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
+	"peerDependencies": {
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
+	},
 	"devDependencies": {
+		"@eslint/js": "^9.8.0",
 		"@types/node": "^22.2.0",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
-		"@vitejs/plugin-react-swc": "^3.7.0",
-		"typescript": "^5.5.4",
-		"vite": "^5.4.0",
-		"vite-plugin-eslint": "^1.8.1"
-	},
-	"dependencies": {
-		"@ant-design/icons": "^5.4.0",
-		"ketcher-core": "^2.21.0",
-		"rc-image": "^7.10.0",
+		"@vitejs/plugin-react-swc": "^3.5.0",
+		"eslint": "^9.8.0",
+		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
+		"eslint-plugin-react-refresh": "^0.4.9",
+		"globals": "^15.9.0",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"typescript": "^5.5.3",
+		"typescript-eslint": "^8.0.0",
+		"vite": "^5.4.0",
+		"vite-plugin-dts": "^4.0.2"
 	}
 }
