--- a/packages/Ketcher/package.json
+++ b/packages/Ketcher/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"version": "1.0.0",
 	"type": "module",
-	"main": "dist/ketcher.js",
+	"main": "dist/index.js",
 	"types": "dist/main.d.ts",
 	"files": [
 		"dist"
@@ -24,16 +24,21 @@
 		"@types/node": "^22.2.0",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
+		"@types/uuid": "^10.0.0",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"eslint": "^9.8.0",
 		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
 		"eslint-plugin-react-refresh": "^0.4.9",
 		"globals": "^15.9.0",
+		"ketcher-core": "^2.21.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"typescript": "^5.5.3",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.4.0",
 		"vite-plugin-dts": "^4.0.2"
+	},
+	"dependencies": {
+		"uuid": "^10.0.0"
 	}
 }
