--- a/packages/Ketcher/package.json
+++ b/packages/Ketcher/package.json
@@ -17,7 +17,8 @@
 	},
 	"peerDependencies": {
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"ketcher-core": "^2.21.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.8.0",
