--- a/packages/Ketcher/package.json
+++ b/packages/Ketcher/package.json
@@ -16,9 +16,9 @@
 		"preview": "vite preview"
 	},
 	"peerDependencies": {
+		"ketcher-core": "^2.21.0",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"ketcher-core": "^2.21.0"
+		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.8.0",
@@ -40,6 +40,8 @@
 		"vite-plugin-dts": "^4.0.2"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^5.4.0",
+		"rc-image": "^7.10.0",
 		"uuid": "^10.0.0"
 	}
 }
