--- a/packages/Ketcher/tsconfig.app.json
+++ b/packages/Ketcher/tsconfig.app.json
@@ -18,7 +18,12 @@
 		"strict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"noFallthroughCasesInSwitch": true
+		"noFallthroughCasesInSwitch": true,
+
+		"paths": {
+			"@": ["./lib"],
+			"@/*": ["./lib/*"]
+		}
 	},
 	"include": ["src", "lib"]
 }
